fixed package repair text alignment issue

--- a/web-frontend/src/app/admin/package/package-depot/depot/package-depot.component.scss
+++ b/web-frontend/src/app/admin/package/package-depot/depot/package-depot.component.scss
@@ -1,3 +1,4 @@
+
 .custom-select {
   width: 300px;
   /* Adjust the width as needed */
@@ -24,10 +25,10 @@ mat-form-field {
   /* Ensures scrollbars appear if content exceeds container size */
 }
 
-::ng-deep .mat-mdc-standard-chip .mdc-evolution-chip__action--primary {
-  padding-left: 0px !important;
-  /* padding-right: 12px; */
-}
+// ::ng-deep .mat-mdc-standard-chip .mdc-evolution-chip__action--primary {
+//   padding-left: 0px !important;
+//   /* padding-right: 12px; */
+// }
 
 mat-chip-row[color="primary"] {
   background: transparent !important;
