--- a/web-frontend/src/app/admin/package/package-repair/package-repair.component.scss
+++ b/web-frontend/src/app/admin/package/package-repair/package-repair.component.scss
@@ -12,9 +12,7 @@ mat-form-field {
   width: 100%;
   margin-top: 3px;
   margin-left: 10px;
-
 }
-
 
 .auto-height {
   height: auto;
@@ -26,7 +24,7 @@ mat-form-field {
 
 ::ng-deep .mat-mdc-standard-chip .mdc-evolution-chip__action--primary
  {
-    padding-left: 5px !important; 
+    padding-left: 0px !important; 
     /* padding-right: 12px; */
 }
 
@@ -41,7 +39,7 @@ mat-form-field {
 
 ::ng-deep input.mat-mdc-chip-input {
   //flex: 1 0 150px;
-  margin-left: 8px !important;
+  margin-left: 0px !important;
 }
 
 mat-chip-row[color="primary"] {
@@ -94,6 +92,7 @@ mat-chip-row[color="primary"] button[matChipRemove] mat-icon {
 .multiSelected_autocomplete{
     padding: 0 12px;
 }
+
 
 
 .truncate-one-wrap {
